--- a/app/src/main/res/layout/activity_netatalk.xml
+++ b/app/src/main/res/layout/activity_netatalk.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <CheckBox
-        android:id="@+id/chk1"
+        android:id="@+id/listVolumes"
         android:layout_width="399dp"
         android:layout_height="43dp"
         android:layout_marginTop="28dp"
@@ -76,16 +76,16 @@
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <CheckBox
-        android:id="@+id/chk2"
+        android:id="@+id/listAllVolContents"
         android:layout_width="399dp"
         android:layout_height="43dp"
         android:background="@color/offWhite"
         android:checked="false"
         android:text="TBD"
-        app:layout_constraintEnd_toEndOf="@+id/chk1"
+        app:layout_constraintEnd_toEndOf="@+id/listVolumes"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/chk1"
-        app:layout_constraintTop_toBottomOf="@+id/chk1" />
+        app:layout_constraintStart_toStartOf="@+id/listVolumes"
+        app:layout_constraintTop_toBottomOf="@+id/listVolumes" />
 
     <TextView
         android:id="@+id/parameter_header"
@@ -96,9 +96,9 @@
         android:textColor="@color/maroon"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/chk2"
-        app:layout_constraintStart_toStartOf="@+id/chk2"
-        app:layout_constraintTop_toBottomOf="@+id/chk2" />
+        app:layout_constraintEnd_toEndOf="@+id/listAllVolContents"
+        app:layout_constraintStart_toStartOf="@+id/listAllVolContents"
+        app:layout_constraintTop_toBottomOf="@+id/listAllVolContents" />
 
     <EditText
         android:id="@+id/ip_address_input"
