--- a/app/src/main/res/layout/fragment_netatalk.xml
+++ b/app/src/main/res/layout/fragment_netatalk.xml
@@ -49,29 +49,29 @@
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <CheckBox
-        android:id="@+id/chk1"
+        android:id="@+id/listVolumes"
         android:layout_width="399dp"
         android:layout_height="43dp"
         android:layout_marginTop="28dp"
         android:background="@color/offWhite"
         android:checked="true"
-        android:text="Open unauthorized session"
+        android:text="List volumes"
         app:layout_constraintEnd_toEndOf="@+id/description"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/description"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <CheckBox
-        android:id="@+id/chk2"
+        android:id="@+id/listAllVolContents"
         android:layout_width="399dp"
         android:layout_height="43dp"
         android:background="@color/offWhite"
         android:checked="false"
-        android:text="TBD"
-        app:layout_constraintEnd_toEndOf="@+id/chk1"
+        android:text="List all volume content"
+        app:layout_constraintEnd_toEndOf="@+id/listVolumes"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/chk1"
-        app:layout_constraintTop_toBottomOf="@+id/chk1" />
+        app:layout_constraintStart_toStartOf="@+id/listVolumes"
+        app:layout_constraintTop_toBottomOf="@+id/listVolumes" />
 
     <TextView
         android:id="@+id/parameter_header"
@@ -82,9 +82,9 @@
         android:textColor="@color/maroon"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/chk2"
-        app:layout_constraintStart_toStartOf="@+id/chk2"
-        app:layout_constraintTop_toBottomOf="@+id/chk2" />
+        app:layout_constraintEnd_toEndOf="@+id/listAllVolContents"
+        app:layout_constraintStart_toStartOf="@+id/listAllVolContents"
+        app:layout_constraintTop_toBottomOf="@+id/listAllVolContents" />
 
     <EditText
         android:id="@+id/ip_address_input"
